[package]
name = "slsk-rs"
version = "0.1.0"
edition = "2024"
description = "SoulSeek protocol implementation in Rust"
license = "MIT"
repository = "https://github.com/example/slsk-rs"
keywords = ["soulseek", "p2p", "protocol", "file-sharing"]
categories = ["network-programming"]

[dependencies]
thiserror = "2"
bytes = "1"
flate2 = "1"
md5 = "0.7"
tokio = { version = "1", features = ["full", "sync"] }
ratatui = "0.29"
crossterm = "0.28"
dotenvy = "0.15"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[[bin]]
name = "slsk-tui"
path = "src/bin/tui/main.rs"

[[bin]]
name = "slsk-debug"
path = "src/bin/debug.rs"
